[package]
name = "banana-swap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
#anchor-lang = "0.29.0"
base64 = "0.22.0"
regex = "1.10.4"
borsh = { version = "1.4.0", features = ["derive"] }