[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
sea-orm = { version = "0.12.15", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
