[package]
name = "indexer-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
futures = "0.3.30"
wasmer = "4.2.6"
anyhow = "1.0.81"
# solana-client = "1.17.13"
# zeroize = "1.3.0"
